--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,19 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@layouts/*": ["src/layouts/*"],
-      "@utils/*": ["src/utils/*"],
-      "@consts": ["src/consts.ts"]
-    }
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ],
+      "@consts": [
+        "src/consts.ts"
+      ]
+    },
+    "jsx": "preserve"
   }
 }
