Fix YouTube width problem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       ],
       "@consts": [
         "src/consts.ts"
+      ],
+      "@/*": [
+        "src/*"
       ]
     },
     "jsx": "preserve"
