--- a/.github/workflows/n8n.yml
+++ b/.github/workflows/n8n.yml
@@ -16,5 +16,5 @@ jobs:
           fetch-depth: 0
       - run: |
             git diff ${{github.event.before}}..${{github.event.after}} --name-status --diff-filter=AM -- 'src/content/posts/*' | while read status file; do
-              curl -X POST https://n8n.lem0n.cc/webhook/16956957-43f0-4980-a238-b7c4a7960f71 -H 'Authorization: ${{secrets.AUTH_HEADER_VALUE}}' -d filename=$file -d action=$($status | rev | cut -d '/' -f 1 | rev)
+              curl -X POST https://n8n.lem0n.cc/webhook/16956957-43f0-4980-a238-b7c4a7960f71 -H 'Authorization: ${{secrets.AUTH_HEADER_VALUE}}' -d filename=$(echo $file | rev | cut -d '/' -f 1 | rev) -d action=$status
             done
