--- a/package.json
+++ b/package.json
@@ -16,25 +16,30 @@
     "@astrojs/partytown": "^2.1.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/svelte": "^5.7.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vue": "^4.5.0",
     "@iconify-json/ph": "^1.1.13",
     "@iconify-json/tabler": "^1.1.116",
     "astro": "^4.11.3",
-    "astro-icon": "^1.1.0",
     "astro-pagefind": "^1.5.0",
     "dayjs": "^1.11.11",
     "pagefind": "^1.1.0",
     "preline": "^2.3.0",
     "sharp": "^0.33.4",
+    "svelte": "^4.2.18",
     "tailwindcss": "^3.4.4",
     "vue": "^3.4.33"
   },
   "devDependencies": {
+    "@iconify-json/icon-park-solid": "^1.1.14",
+    "@iconify-json/ion": "^1.1.18",
+    "@iconify-json/jam": "^1.1.8",
+    "@iconify-json/prime": "^1.1.12",
+    "@iconify/tailwind": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.4"
   }
 }
