--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@iconify-json/ph": "^1.1.13",
     "@iconify-json/tabler": "^1.1.116",
+    "@preline/theme-switch": "^2.4.0",
     "astro": "^4.11.3",
     "astro-pagefind": "^1.5.0",
     "dayjs": "^1.11.11",
