Revert "Check Prettier on Git pre-push hook"
This reverts commit 3a2fe43d3da36336bff17ce0e2ed8e724d1238a6.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "format": "prettier -w .",
-    "astro": "astro",
-    "prepare": "husky"
+    "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
@@ -40,7 +39,6 @@
     "@iconify-json/prime": "^1.1.12",
     "@iconify/tailwind": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
-    "husky": "^9.1.1",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.14.0",
     "prettier-plugin-tailwindcss": "^0.6.2",
