--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.11.11",
     "pagefind": "^1.1.0",
     "preline": "^2.3.0",
+    "rehype-external-links": "^3.0.0",
     "sharp": "^0.33.4",
     "svelte": "^4.2.18",
     "tailwindcss": "^3.4.4",
