--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "format": "prettier -w .",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "astro sync"
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
