--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/cloudflare": "^11.0.1",
     "@astrojs/mdx": "^3.1.0",
+    "@astrojs/netlify": "^5.5.0",
     "@astrojs/partytown": "^2.1.1",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.5",
